com.apple.WebKit.Networking crash in com.apple.Foundation: -[__NSOperationInternal _start:] <https://webkit.org/b/181272> <rdar://problem/35657310>

Reviewed by Alex Christensen.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(downgradeRequest): Remove unnecessary -autorelease.


Canonical link: https://commits.webkit.org/197110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226387 268f45cc-cd09-0410-ab3c-d52691b4dbfc